# dLuxToliman

./: .gitignore  LICENSE  README.md  photon_count.md  pyproject.toml  requirements.txt  setup.py
dLuxToliman/: __init__.py  gradient_energy.py  instruments.py  optical_layers.py  optical_systems.py  optics.py  sources.py  telescopes.py
dLuxToliman/layers/: __init__.py  detector_layers.py  optical_layers.py
dLuxToliman/tests/: test_dLuxToliman.py  test_sources.py
jitter_fisher/: SHM_jitter.md  jitter_FIA.md  setup_jitter.py
tests/: test_optical_systems.py
