[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dLuxToliman"
version = "0.1.3.1"
description = "A repo to hold the canonical dLux Toliman models."
readme = "README.md"

#[dependencies]
#dLux = "*"  # TODO HELP update once main merge
#jax = "*"
#jaxlib = "*"
#
#[test]
#[scripts]