[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dLuxToliman"
version = "0.3.0"
description = "A repo to hold the canonical dLux Toliman models."
readme = "README.md"

#[dependencies]
#dLux = "0.14.*"
#jax = "*"
#jaxlib = "*"
#
#[test]
#[scripts]